force-app/main/default/objects/TTS_Agreement_Deliverable__c/TTS_Agreement_Deliverable__c.object-meta.xml
<CustomObject>
    <description>Tracks specific deliverables committed to under an Agreement.</description>
    <label>Agreement Deliverable</label>
    <nameField>
        <displayFormat>ADEL{0000000}</displayFormat>
        <label>Deliverable ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Deliverables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>