force-app/main/default/objects/TTS_Agreement_Deliverable__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <description>Associates the deliverable with its parent Agreement.</description>
    <inlineHelpText>Select the Agreement that requires this deliverable.</inlineHelpText>
    <label>Agreement</label>
    <referenceTo>TTS_Agreement__c</referenceTo>
    <relationshipLabel>Agreement Deliverables</relationshipLabel>
    <relationshipName>Agreement_Deliverables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>