force-app/main/default/objects/TTS_Agreement_Deliverable__c/fields/Deadline__c.field-meta.xml
<CustomField>
    <fullName>Deadline__c</fullName>
    <description>Records the date and time by which the deliverable is due.</description>
    <inlineHelpText>Enter the date and time by which the deliverable must be completed.</inlineHelpText>
    <label>Deadline</label>
    <type>DateTime</type>
</CustomField>