force-app/main/default/objects/TTS_Agreement_Deliverable__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Captures the scope and requirements of the deliverable.</description>
    <inlineHelpText>Enter the deliverable's scope, objectives, requirements, and constraints.</inlineHelpText>
    <label>Description</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>