force-app/main/default/objects/TTS_Agreement_Deliverable__c/fields/Expected_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Expected_Outcome__c</fullName>
    <description>Defines the result expected when the deliverable is completed.</description>
    <inlineHelpText>Enter the measurable result or outcome expected from completing this deliverable.</inlineHelpText>
    <label>Expected Outcome</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>