force-app/main/default/objects/TTS_Agreement_Deliverable__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Stores the descriptive name or title of the deliverable.</description>
    <inlineHelpText>Enter a concise name for the output required by the agreement.</inlineHelpText>
    <label>Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>