force-app/main/default/objects/TTS_Agreement_Deliverable__c/fields/Resource_Details__c.field-meta.xml
<CustomField>
    <fullName>Resource_Details__c</fullName>
    <description>Describes resources required to complete the deliverable.</description>
    <inlineHelpText>Enter the people, tools, software, data, or other resources needed for completion.</inlineHelpText>
    <label>Resource Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>