force-app/main/default/objects/TTS_Agreement_Deliverable__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Categorises the form of work or output required by the agreement.</description>
    <inlineHelpText>Select the category that best describes the required deliverable.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Analysis</fullName>
            </value>
            <value>
                <fullName>Creative Work</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Presentation</fullName>
            </value>
            <value>
                <fullName>Project Management Documents</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Software Development</fullName>
            </value>
            <value>
                <fullName>Strategy Document</fullName>
            </value>
            <value>
                <fullName>Technical Documentation</fullName>
            </value>
            <value>
                <fullName>Training Materials</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>